--- a/style.css
+++ b/style.css
@@ -3,5 +3,75 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Rubik Burned', system-ui;
+    color: rgb(0, 145, 255);
+    font-weight: bolder;
 }
 
+header, main, footer, .first, .second {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
+
+header {
+    line-height: 2.5em;
+    padding: 1.5em;
+    background-color: rgb(34, 0, 133);
+}
+
+main {
+    background-color: rgb(68, 49, 123);
+
+}
+
+.first, .second {
+    padding: 3em;
+    line-height: 10em;
+}
+
+.first > button {
+    padding: 1em 2em;
+    border-radius: 5px;
+    transition: all .3s;
+    background-color: rgb(34, 0, 133);
+    font-size: 14px;
+    border: 2px solid rgb(0, 145, 255);;
+}
+
+.first > button:hover {
+    cursor: pointer;
+    transform: scale(1.1);
+}
+
+.image-sec {
+    display: flex;
+    gap: 3em;
+}
+
+.images {
+    border: 2px solid rgb(0, 145, 255);;
+    border-radius: 5px;
+    height: 150px;
+    width: 150px;
+    transition: all .3s;
+}
+
+
+.images:hover {
+    transform: scale(1.1);
+    cursor: pointer;
+}
+
+.images > img {
+    height: inherit;
+    width: inherit;
+    object-fit: contain;
+}
+
+footer {
+    padding: 2em 0;
+    font-size: 18px;
+    background-color: rgb(34, 0, 133);
+}
