--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
     background-color: rgb(68, 49, 123);
 }
 
-header, main, footer, .first, .second {
+header, main, .first{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -25,7 +25,7 @@ header {
     background-color: rgb(34, 0, 133);
 }
 
-.first, .second {
+.first {
     padding: 3em;
     line-height: 10em;
 }
@@ -58,7 +58,14 @@ header {
 }
 
 .second {
+    text-align: center;
     display: none;
+    margin-top: 3em;
+    line-height: 3em;
+}
+
+.second > .image-sec {
+    margin: 2em;
 }
 
 .images:hover {
@@ -70,14 +77,4 @@ header {
     height: inherit;
     width: inherit;
     object-fit: contain;
-}
-
-footer {
-    padding: 2em 0;
-    font-size: 18px;
-    background-color: rgb(34, 0, 133);
-    position: absolute;
-    right: 0;
-    left: 0;
-    bottom: 0;
 }
